# Multi-Motion

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
data_collection/: README.md  bev_blip2_image_folder.py  bev_blip2_laion_multinode.py  bev_blip2_laion_multinode.sh  bev_blip2_laion_viz.sh  collect_data_with_log.sh  data.py  data_laion.py  filtering-23-10-13-20-03-53.csv  inspect_filter_csv.py  net_utils.py  processing_utils.py  repair_tarfile.py  scan_laion.py  scan_laion_multinode.sh  setup_local.sh  test_clip_filter.py  test_clip_sorting.py  test_instruct_blip.py
diffusion/: .gitignore  README.md  ablation.sh  base_sample.py  base_train.py  cfg_sweep_one_node.sh  cfg_sweep_sample.py  guidance_sweep_one_node.sh  guidance_sweep_sample.py  requirements.txt  sample_multi_node.sh  sample_one_node.sh  text_1024.txt  train_multi_node.sh  train_one_node.sh
docker_assets/: Dockerfile  Dockerfile_video  container_template.sh
pose_corrector/: README.md  demo_mesh_in_frame_calc.py  shift_overlapping_poses.py
pose_datasets/: README.md  amass_loader.py  clip_tokenizer.py  compute_mean_std.py  data_utils.py  dummy_loader.py  gta_download.sh  gta_loader.py  interhuman_loader.py  joint_loader.py  joint_uncond_motion_loader.py  laion_pose_loader.py  laion_val.txt  laion_val_2.txt  laion_viz_prompts.txt  mdm_loader.py  mpii_loader.py  save_interhuman_samples.py  save_joint_motion_samples.py  save_motion_samples.py  save_pose_samples.py  val_prompt_loader.py  webvid_motion_loader.py
smpl/: README.md  smpl.py
video_datasets/: test_mat_file.py  (+5 more)
(+137 files in other folders)
